--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div id="article">
 		<div class="contents">
             <header id="header">
-                <div class="logo"><a href="/"><img src="img/img01_pc.png" alt="" class="switch-img img01"></a></div>
+                <div class="logo"><a href="/" target="_blank"><img src="img/img01_pc.png" alt="" class="switch-img img01"></a></div>
                 <div class="btn"><a href="#mailform"><img src="img/btn01_pc.png" alt="" class="switch-img btn01"></a></div>
             </header>
             <img src="img/img02_pc.png" alt="" class="switch-img img02">
@@ -104,14 +104,210 @@
                             </dd>
                             <dt>お名前<span class="req">（必須）</span></dt>
                             <dd><input size="20" type="text" name="お名前" /></dd>
+                            <dt>生年月日<span class="req">（必須）</span></dt>
+                            <dd class="birthday">
+                                <div>
+                                    <select name="年">
+                                        <option value="1920">1920</option>
+                                        <option value="1921">1921</option>
+                                        <option value="1922">1922</option>
+                                        <option value="1923">1923</option>
+                                        <option value="1924">1924</option>
+                                        <option value="1925">1925</option>
+                                        <option value="1926">1926</option>
+                                        <option value="1927">1927</option>
+                                        <option value="1928">1928</option>
+                                        <option value="1929">1929</option>
+                                        <option value="1930">1930</option>
+                                        <option value="1931">1931</option>
+                                        <option value="1932">1932</option>
+                                        <option value="1933">1933</option>
+                                        <option value="1934">1934</option>
+                                        <option value="1935">1935</option>
+                                        <option value="1936">1936</option>
+                                        <option value="1937">1937</option>
+                                        <option value="1938">1938</option>
+                                        <option value="1939">1939</option>
+                                        <option value="1940">1940</option>
+                                        <option value="1941">1941</option>
+                                        <option value="1942">1942</option>
+                                        <option value="1943">1943</option>
+                                        <option value="1944">1944</option>
+                                        <option value="1945">1945</option>
+                                        <option value="1946">1946</option>
+                                        <option value="1947">1947</option>
+                                        <option value="1948">1948</option>
+                                        <option value="1949">1949</option>
+                                        <option value="1950">1950</option>
+                                        <option value="1951">1951</option>
+                                        <option value="1952">1952</option>
+                                        <option value="1953">1953</option>
+                                        <option value="1954">1954</option>
+                                        <option value="1955">1955</option>
+                                        <option value="1956">1956</option>
+                                        <option value="1957">1957</option>
+                                        <option value="1958">1958</option>
+                                        <option value="1959">1959</option>
+                                        <option value="1960">1960</option>
+                                        <option value="1961">1961</option>
+                                        <option value="1962">1962</option>
+                                        <option value="1963">1963</option>
+                                        <option value="1964">1964</option>
+                                        <option value="1965">1965</option>
+                                        <option value="1966">1966</option>
+                                        <option value="1967">1967</option>
+                                        <option value="1968">1968</option>
+                                        <option value="1969">1969</option>
+                                        <option value="1970">1970</option>
+                                        <option value="1971">1971</option>
+                                        <option value="1972">1972</option>
+                                        <option value="1973">1973</option>
+                                        <option value="1974">1974</option>
+                                        <option value="1975">1975</option>
+                                        <option value="1976">1976</option>
+                                        <option value="1977">1977</option>
+                                        <option value="1978">1978</option>
+                                        <option value="1979">1979</option>
+                                        <option value="1980" selected>1980</option>
+                                        <option value="1981">1981</option>
+                                        <option value="1982">1982</option>
+                                        <option value="1983">1983</option>
+                                        <option value="1984">1984</option>
+                                        <option value="1985">1985</option>
+                                        <option value="1986">1986</option>
+                                        <option value="1987">1987</option>
+                                        <option value="1988">1988</option>
+                                        <option value="1989">1989</option>
+                                        <option value="1990">1990</option>
+                                        <option value="1991">1991</option>
+                                        <option value="1992">1992</option>
+                                        <option value="1993">1993</option>
+                                        <option value="1994">1994</option>
+                                        <option value="1995">1995</option>
+                                        <option value="1996">1996</option>
+                                        <option value="1997">1997</option>
+                                        <option value="1998">1998</option>
+                                        <option value="1999">1999</option>
+                                        <option value="2000">2000</option>
+                                        <option value="2001">2001</option>
+                                        <option value="2002">2002</option>
+                                        <option value="2003">2003</option>
+                                        <option value="2004">2004</option>
+                                        <option value="2005">2005</option>
+                                        <option value="2006">2006</option>
+                                        <option value="2007">2007</option>
+                                        <option value="2008">2008</option>
+                                        <option value="2009">2009</option>
+                                        <option value="2010">2010</option>
+                                        <option value="2011">2011</option>
+                                        <option value="2012">2012</option>
+                                        <option value="2013">2013</option>
+                                        <option value="2014">2014</option>
+                                        <option value="2015">2015</option>
+                                        <option value="2016">2016</option>
+                                        <option value="2017">2017</option>
+                                        <option value="2018">2018</option>
+                                    </select>
+                                    年
+                                </div>
+                                <div>
+                                    <select name="月">
+                                        <option value="1" selected>1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                        <option value="11">11</option>
+                                        <option value="12">12</option>
+                                    </select>
+                                    月
+                                </div>
+                                <div>
+                                    <select name="日">
+                                        <option value="1" selected>1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                        <option value="11">11</option>
+                                        <option value="12">12</option>
+                                        <option value="13">13</option>
+                                        <option value="14">14</option>
+                                        <option value="15">15</option>
+                                        <option value="16">16</option>
+                                        <option value="17">17</option>
+                                        <option value="18">18</option>
+                                        <option value="19">19</option>
+                                        <option value="20">20</option>
+                                        <option value="21">21</option>
+                                        <option value="22">22</option>
+                                        <option value="23">23</option>
+                                        <option value="24">24</option>
+                                        <option value="25">25</option>
+                                        <option value="26">26</option>
+                                        <option value="27">27</option>
+                                        <option value="28">28</option>
+                                        <option value="29">29</option>
+                                        <option value="30">30</option>
+                                        <option value="31">31</option>
+                                    </select>
+                                    日
+                                </div>
+                            </dd>
+                            <dt>郵便番号</dt>
+                            <dd><input type="text" name="郵便番号" size="10" maxlength="8" onKeyUp="AjaxZip3.zip2addr(this,'','住所','住所');" placeholder="（例）107-0062" /></dd>
                             <dt>住所<span class="req">（必須）</span></dt>
-                            <dd><input size="30" type="text" name="住所" /><span class="ex">（例）〒107-0062　東京都港区南青山1-1-1 新青山ビル東館 3F</span></dd>
+                            <dd><input type="text" name="住所" size="60" placeholder="（例）東京都港区南青山1-1-1 新青山ビル東館 3F" /></dd>
                             <dt>お電話番号<span class="req">（必須）</span></dt>
-                            <dd class="caution">数字とハイフンのみ（全て半角）で入力してください</dd>
-                            <dd><input size="30" type="text" name="お電話番号" /><span class="ex">（例）03-6264-4570</span></dd>
+                            <dd><input size="30" type="text" name="お電話番号" placeholder="（例）03-6264-4570" /></dd>
+                            <dt>ご希望の連絡時間帯（任意）</dt>
+                            <dd class="timezone">
+                                <div>
+                                    <select name="第１希望">
+                                    <option value="">第１希望</option>
+                                        <option value="10:00〜12:00">10:00〜12:00</option>
+                                        <option value="12:00〜14:00">12:00〜14:00</option>
+                                        <option value="14:00〜16:00">14:00〜16:00</option>
+                                        <option value="16:00〜18:00">16:00〜18:00</option>
+                                        <option value="18:00〜20:00">18:00〜20:00</option>
+                                        <option value="20:00〜22:00">20:00〜22:00</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <select name="第２希望">
+                                        <option value="">第２希望</option>
+                                        <option value="10:00〜12:00">10:00〜12:00</option>
+                                        <option value="12:00〜14:00">12:00〜14:00</option>
+                                        <option value="14:00〜16:00">14:00〜16:00</option>
+                                        <option value="16:00〜18:00">16:00〜18:00</option>
+                                        <option value="18:00〜20:00">18:00〜20:00</option>
+                                        <option value="20:00〜22:00">20:00〜22:00</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <select name="第３希望">
+                                        <option value="">第３希望</option>
+                                        <option value="10:00〜12:00">10:00〜12:00</option>
+                                        <option value="12:00〜14:00">12:00〜14:00</option>
+                                        <option value="14:00〜16:00">14:00〜16:00</option>
+                                        <option value="16:00〜18:00">16:00〜18:00</option>
+                                        <option value="18:00〜20:00">18:00〜20:00</option>
+                                        <option value="20:00〜22:00">20:00〜22:00</option>
+                                    </select>
+                                </div>
+                            </dd>
                             <dt>メールアドレス<span class="req">（必須）</span></dt>
-                            <dd class="caution">メールアドレスを入力してください</dd>
-                            <dd><input size="30" type="text" name="メールアドレス" /><span class="ex">（例）info-am@darwin-ap.co.jp</span></dd>
+                            <dd><input size="30" type="text" name="メールアドレス" placeholder="（例）info-am@darwin-ap.co.jp" /></dd>
                             <dt>年収<span class="req">（必須）</span></dt>
                             <dd>
                                 <select name="年収">
@@ -203,5 +399,6 @@ $(function(){
   });
 });
 </script>
+<script src="https://ajaxzip3.github.io/ajaxzip3.js" charset="UTF-8"></script>
 </body>
 </html>
