フォーム修正

--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
                                 <select name="ご職業">
                                     <option value="">ご選択ください</option>
                                     <option value="経営者">経営者</option>
-                                    <option value="会社員・会社役員">会社員・会社役員</option>
+                                    <option value="会社役員">会社役員</option>
+                                    <option value="会社員">会社員</option>
                                     <option value="公務員">公務員</option>
                                     <option value="専門職">専門職</option>
                                     <option value="その他">その他</option>
